--- a/webapp/index.html
+++ b/webapp/index.html
@@ -415,13 +415,18 @@
                       if (fixtureData[p].ID === fixtureId) {
                         var fixture = fixtureData[p];
                       }
-
                     }
 
                     sequenceRow = {};
                     sequenceRow.fixtureId = fixture.ID;
                     sequenceRow.homeTeam = fixture.HOME_TEAM;
                     sequenceRow.awayTeam = fixture.AWAY_TEAM;
+                    if (sequenceData[i].team === fixture.HOME_TEAM) {
+                      sequenceRow.homeTeamFormat = "<strong>{0}</strong>";
+                    }
+                    if (sequenceData[i].team === fixture.AWAY_TEAM) {
+                      sequenceRow.awayTeamFormat = "<strong>{0}</strong>";
+                    }
 
                     for (var q=0; q<betData.length; q++) {
                       if (betData[q].FIXTURE_ID === sequenceData[i].steps[j].fixtureId) {
