id columns hidden

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -311,7 +311,8 @@
               fixtureId: {
                 index: 1,
                 type: "number",
-                unique: true
+                unique: true,
+                hidden: true
               },
               div: {
                 index: 2,
@@ -377,7 +378,8 @@
                   id: {
                     index: 1,
                     type: "string",
-                    unique: true
+                    unique: true,
+                    hidden:true
                   },
                   team: {
                     index: 2,
