--- a/webapp/index.html
+++ b/webapp/index.html
@@ -149,6 +149,10 @@
     <script src="js/jquery.watable.js" type="text/javascript" charset="utf-8"></script>
      <!--<script src="/static/datepicker/bootstrap-datepicker.js" type="text/javascript" charset="utf-8"></script>-->
     <script type="text/javascript">
+    function resetForm($form) {
+      $form.find('input:text, input:password, input:file, select, textarea').val('');
+      $form.find('input:radio, input:checkbox').removeAttr('checked').removeAttr('selected');
+    }
       $(document).ready( function() {
         $('#refreshDataButton').on('click', function(e) {
           $('#loading-indicator').show();
@@ -176,11 +180,15 @@
           });
         });
 
-        $('#myModal').on('show.bs.modal', function (e) {
+        $('#myModal').on('show', function (e) {
             $('#fixtureId').val(window.modalData.fixtureId);
             $('#homeTeam').val(window.modalData.homeTeam);
             $('#awayTeam').val(window.modalData.awayTeam);
             $('#teamName').val(window.modalData.teamName);
+        });
+
+        $('#myModal').on('hidden', function() {
+          resetForm($('#start-sequence-form'));
         });
 
         $('#modalSubmit').on('click', function(e) {
@@ -251,11 +259,6 @@
                 }
             },
             rowClicked: function(data) {      //Fires when a row is clicked (Note. You need a column with the 'unique' property).
-                console.log('row clicked');   //data.event holds the original jQuery event.
-                console.log(data);            //data.row holds the underlying row you supplied.
-                                              //data.column holds the underlying column you supplied.
-                                              //data.checked is true if row is checked.
-                                              //'this' keyword holds the clicked element.
                 data.event.preventDefault();
                 window.modalData = data.row;                             
                 $('#myModal').modal();
@@ -288,11 +291,7 @@
                 }
             },
             rowClicked: function(data) {      //Fires when a row is clicked (Note. You need a column with the 'unique' property).
-                console.log('row clicked');   //data.event holds the original jQuery event.
-                console.log(data);            //data.row holds the underlying row you supplied.
-                                              //data.column holds the underlying column you supplied.
-                                              //data.checked is true if row is checked.
-                                              //'this' keyword holds the clicked element.
+                
                 data.event.preventDefault();
                 $.get('api/fixture/next', {teamName: data.row.teamName}, function(response) {
                   var row = {};
@@ -300,6 +299,7 @@
                   row.homeTeam = response.HOME_TEAM;
                   row.awayTeam = response.AWAY_TEAM;
                   row.teamName = data.row.teamName;
+                  window.modalData = {};
                   window.modalData = row;                             
                   $('#myModal').modal();
                 });
@@ -379,7 +379,7 @@
                     index: 1,
                     type: "string",
                     unique: true,
-                    hidden:true
+                    hidden: true
                   },
                   team: {
                     index: 2,
@@ -391,11 +391,12 @@
                   },
                   dateStarted: {
                     index: 4,
-                    type: "date"
+                    type: "date",
                   },
                   fixtureId: {
                     index: 5,
-                    type: "number"
+                    type: "number",
+                    hidden: true
                   },
                   homeTeam: {
                     index: 6,
