date format fixed in webapp

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -222,7 +222,7 @@
                 },
                 date: {
                   utc: true,            //Show time as universal time, ie without timezones.
-                  //format: 'yy/dd/MM',   //The format. See all possible formats here http://arshaw.com/xdate/#Formatting.
+                  format: 'yyyy-MM-dd',   //The format. See all possible formats here http://arshaw.com/xdate/#Formatting.
                   datePicker: true      //Requires "Datepicker for Bootstrap" plugin (http://www.eyecon.ro/bootstrap-datepicker).
                 }
             },
@@ -254,7 +254,7 @@
                 },
                 date: {
                   utc: true,            //Show time as universal time, ie without timezones.
-                  //format: 'yy/dd/MM',   //The format. See all possible formats here http://arshaw.com/xdate/#Formatting.
+                  format: 'yyyy-MM-dd',   //The format. See all possible formats here http://arshaw.com/xdate/#Formatting.
                   datePicker: true      //Requires "Datepicker for Bootstrap" plugin (http://www.eyecon.ro/bootstrap-datepicker).
                 }
             },
@@ -286,7 +286,7 @@
                 },
                 date: {
                   utc: true,            //Show time as universal time, ie without timezones.
-                  //format: 'yy/dd/MM',   //The format. See all possible formats here http://arshaw.com/xdate/#Formatting.
+                  format: 'yyyy-MM-dd',   //The format. See all possible formats here http://arshaw.com/xdate/#Formatting.
                   datePicker: true      //Requires "Datepicker for Bootstrap" plugin (http://www.eyecon.ro/bootstrap-datepicker).
                 }
             },
