--- a/webapp/index.html
+++ b/webapp/index.html
@@ -316,35 +316,43 @@
               },
               div: {
                 index: 2,
-                type: "string"
+                type: "string",
+                friendly: "Division"
               },
               matchDate: {
                 index: 3,
-                type: "date"
+                type: "date",
+                friendly: "Match Date"
               },
               homeTeam: {
                 index: 4,
-                type: "string"
+                type: "string",
+                friendly: "Home Team"
               },
               awayTeam: {
                 index: 5,
-                type: "string"
+                type: "string",
+                friendly: "Away Team"
               },
               ftHomeGoals: {
                 index: 6,
-                type: "number"
+                type: "number",
+                friendly: "FT Home Goals"
               },
               ftAwayGoals: {
                 index: 7,
-                type: "number"
+                type: "number",
+                friendly: "FT Away Goals"
               },
               ftResult: {
                 index: 8,
-                type: "string"
+                type: "string",
+                friendly: "FT Result"
               },
               status: {
                 index: 9,
-                type: "string"
+                type: "string",
+                friendly: "Status"
               }
             };
           
@@ -383,15 +391,18 @@
                   },
                   team: {
                     index: 2,
-                    type: "string"
+                    type: "string",
+                    friendly: "Team"
                   },
                   status: {
                     index: 3,
-                    type: "string"
+                    type: "string",
+                    friendly: "Sequence Status"
                   },
                   dateStarted: {
                     index: 4,
                     type: "date",
+                    friendly: "Date Started"
                   },
                   fixtureId: {
                     index: 5,
@@ -400,31 +411,38 @@
                   },
                   division: {
                     index: 6,
-                    type: "string"
+                    type: "string",
+                    friendly: "Division"
                   },
                   fixtureDate: {
                     index: 7,
-                    type: "date"
+                    type: "date",
+                    friendly: "Fixture Date"
                   },
                   homeTeam: {
                     index: 8,
-                    type: "string"
+                    type: "string",
+                    friendly: "Home Team"
                   },
                   awayTeam: {
                     index: 9,
-                    type: "string"
+                    type: "string",
+                    friendly: "Away Team"
                   },
                   amount: {
                     index: 10,
-                    type: "number"
+                    type: "number",
+                    friendly: "Amount Put"
                   },
                   odd: {
                     index: 11,
-                    type: "number"
+                    type: "number",
+                    friendly: "Odd"
                   },
                   result: {
                     index: 12,
-                    type: "string"
+                    type: "string",
+                    friendly: "Result"
                   }
                 };
 
@@ -491,15 +509,18 @@
           teamName: {
             index: 1,
             type: "string",
-            unique: true
+            unique: true,
+            friendly: "Team Name"
           },
           division: {
             index: 2,
-            type: "string"
+            type: "string",
+            friendly: "Division"
           },
           series: {
             index: 3,
-            type: "number"
+            type: "number",
+            friendly: "Matches wo Draw"
           }
         };
 
