Default draw option when placing bets

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -75,9 +75,17 @@
                 <label for="amount">Amount</label>
                 <input id="amount" name="amount" class="form-control" type="text" />
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label for="bet">Bet</label>
                 <input id="bet" name="bet" class="form-control" type="text" />
+              </div> -->
+              <div class="form-group">
+                <label for="bet">Bet</label>
+                <select id="bet" name="bet" class="form-control">
+                  <option value="D" selected="selected">Draw</option>
+                  <option value="H">Home</option>
+                  <option value="A">Away</option>
+                </select>
               </div>
           </div>
           </form>
