--- a/webapp/index.html
+++ b/webapp/index.html
@@ -91,7 +91,7 @@
           </form>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button id="modalSubmit" type="button" class="btn btn-primary" >Place Bet Start Sequence</button>
+            <button id="modalSubmit" type="button" class="btn btn-primary" data-submit-type="">Place Bet Start Sequence</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
@@ -200,17 +200,29 @@
         });
 
         $('#modalSubmit').on('click', function(e) {
+
           var data = $("#start-sequence-form").serialize();
-          $.post('api/bet', data, function(response) {
-            $.post('api/sequence', data, function(response2) {
-              console.log('bet and sequence created');
-              $('#myModal').modal('hide');
-            });
-          });
-        });
+          if (window.modalData !== 'undefined' && window.modalData.submitType !== 'undefined') {
+            if (window.modalData.submitType === 'draw') {
+              $.post('api/bet', data, function(response) {
+                $.post('api/sequence', data, function(response2) {
+                  console.log('bet and sequence created');
+                  $('#myModal').modal('hide');
+                });
+              });
+            } else if (window.modalData.submitType === 'sequence') {
+               $.post('api/bet', data, function(response) {
+                console.log('bet placed');
+               });
+            }
+
+          window.modalData = {};
+          $('#myModal').modal('hide');
+        }
+      });
 
         var fixtureTable = $('#fixture-table').WATable({
-            pageSize: 15,                //Sets the initial pagesize
+            pageSize: 50,                //Sets the initial pagesize
             filter: true,               //Show filter fields
             columnPicker: true,         //Show the columnPicker button
             pageSizes: [15, 50,100,200,500],  //Set custom pageSizes. Leave empty array to hide button.
@@ -242,7 +254,7 @@
         }).data('WATable');
 
       var sequenceTable = $('#sequence-table').WATable({
-            pageSize: 15,                //Sets the initial pagesize
+            pageSize: 50,                //Sets the initial pagesize
             filter: true,               //Show filter fields
             columnPicker: true,         //Show the columnPicker button
             pageSizes: [15, 50,100,200,500],  //Set custom pageSizes. Leave empty array to hide button.
@@ -269,7 +281,10 @@
             rowClicked: function(data) {      //Fires when a row is clicked (Note. You need a column with the 'unique' property).
                 data.event.preventDefault();
                 console.log(data.row);
-                window.modalData = data.row;                             
+                window.modalData = {};
+                window.modalData = data.row;
+                window.modalData.submitType = 'sequence';
+
                 $('#myModal').modal();
             }
         }).data('WATable');
@@ -309,7 +324,8 @@
                   row.awayTeam = response.AWAY_TEAM;
                   row.teamName = data.row.teamName;
                   window.modalData = {};
-                  window.modalData = row;                             
+                  window.modalData = row;
+                  window.modalData.submitType = 'draw';
                   $('#myModal').modal();
                 });
                 
