draw by default

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -224,6 +224,7 @@
           $('#homeTeam').val(window.modalData.homeTeam);
           $('#awayTeam').val(window.modalData.awayTeam);
           $('#teamName').val(window.modalData.teamName);
+          $('#bet').val('D');
       });
 
       $('#myModal').on('hidden', function() {
